/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package com.dremio.dac.service.support;

option java_package = "com.dremio.dac.service.support";
option java_outer_classname = "SupportRPC";
option optimize_for = SPEED;
option java_generate_equals_and_hash = true;

message ClusterIdentityRequest {

}

// Keep in-sync with com.dremio.dac.proto.support.ClusterIdentity
message ClusterIdentityResponse {
  optional string identity = 1;
  optional int64 serial = 2 [deprecated = true];
  optional int64 created = 3;
  optional ClusterVersion version = 4;
  optional string tag = 5;
}

// Keep in-sync with com.dremio.dac.proto.support.ClusterVersion
message ClusterVersion {
  optional int32 major = 1;
  optional int32 minor = 2;
  optional int32 patch = 3;
  optional int32 buildNumber = 4;
  optional string qualifier = 5;
}
